tests/neg/i5010.scala
class i0 extends Function0 // error
